<resources>
    <string name="app_name">MOBV-project</string>

    <!-- Fragment label -->
    <string name="fragment_login_label">Login</string>
    <string name="fragment_intro_label">Intro</string>
    <string name="fragment_create_wallet_label">Create wallet</string>
    <string name="fragment_import_wallet_label">Import wallet</string>
    <string name="fragment_contacts_label">Contacts</string>
    <string name="fragment_my_balance_label">My Balance</string>
    <string name="fragment_settings_label">Settings</string>
    <string name="fragment_create_pin_label">Create pin</string>
    <string name="fragment_create_new_transaction_label">New Transaction</string>
    <string name="fragment_new_contact_label">Contact</string>
    <string name="fragment_save_recipient_label">Save recipient</string>
    <string name="my_balance_copy_account_key_toast_text">Account id copied</string>

    <!-- Navigation bar -->
    <string name="bottom_nav_settings">Settings</string>
    <string name="bottom_nav_contacts">Contacts</string>
    <string name="bottom_nav_my_balance">My Balance</string>

    <!-- Intro -->
    <string name="intro_first_name_hint">First name</string>
    <string name="intro_last_name_hint">Last name</string>
    <string name="intro_pin_pin_hint">Enter pin</string>
    <string name="intro_pin_confirmation_hint">Repeat your pin</string>
    <string name="intro_create_new_wallet_button_text">Create a new wallet</string>
    <string name="intro_import_wallet_button_text">Already have a wallet?</string>
    <string name="intro_pin_mismatch_text">Pins do not match</string>
    <string name="intro_pin_invalid_text">Invalid or missing pin. Please enter at least 8 characters</string>
    <string name="intro_private_key_label_text">Private key:</string>

    <!-- Registered -->
    <string name="registered_warning_popup_title">You are about to leave this screen</string>
    <string name="registered_warning_popup_text">Are you sure you have copied and saved the displayed Private Key?\nOtherwise it will be lost forever.</string>
    <string name="registered_warning_popup_answer_positive">Yes, take me away</string>
    <string name="registered_warning_popup_answer_negative">No, go back</string>
    <string name="registered_warning_text">Please save the displayed Private Key.\nIf you lose your Private Key you won\'t be able to recover your wallet when you change your device or forget your pin code.</string>
    <string name="registered_copy_private_key_button_text">Copy</string>
    <string name="registered_copy_private_key_toast_text">Private key copied</string>
    <string name="registered_continue_button_text">Continue</string>

    <!-- Import -->
    <string name="import_private_key_hint">Enter your private key</string>
    <string name="import_submit_import">Import</string>
    <string name="import_form_error_empty_key">You have to provide a key</string>
    <string name="import_form_error_invalid_key_length">You have entered an invalid key</string>

    <!-- Contacts -->
    <string name="contact_card_contact_icon_description">Contact icon</string>
    <string name="contact_card_contact_name_description">Contact name</string>

    <!-- New contact -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contactNameHint">Contact name</string>
    <string name="contactAccountIdHint">Account Id</string>
    <string name="addNewContactButton">Save</string>
    <string name="new_contact_delete_button">Delete</string>

    <string name="new_contact_created">Contact saved</string>
    <string name="new_contact_updated">Contact updated</string>
    <string name="new_contact_deleted">Contact deleted</string>

    <string name="new_contact_invalid_contact_name">Invalid name</string>
    <string name="new_contact_invalid_contact_account_id">You have entered an invalid contact id</string>
    <string name="new_contact_non_existing_account_id">Account with this id is not registered</string>
    <string name="new_contact_duplicate_contact">You already have a contact with this id</string>
    <string name="new_contact_you_like_yourself">You can not add yourself</string>

    <!-- My balance -->
    <string name="my_balance_card_plus_icon_description">Plus icon</string>
    <string name="asset_options_description">Asset options</string>
    <string name="create_transaction_description">Create transaction</string>
    <string name="my_balance_account_id_label">Account Id:</string>
    <string name="my_balance_balance_label">Balance:</string>
    <string name="my_balance_asset_spinner_label">Asset:</string>

    <!-- Create new transaction -->
    <string name="accountId_hint">Account ID</string>
    <string name="amount_hint">Amount</string>
    <string name="sendTransactionButton">Send Transaction</string>
    <string name="pin_hint">PIN</string>
    <string name="currency_text">Lumens</string>
    <string name="plus_icon">Plus icon</string>

    <!-- Save recipient -->
    <string name="addSkipButton">Skip</string>
    <string name="sentTransactionSaveContact">Transaction has been successfully sent. Would you like to save the recipient as a new contact?</string>

    <!-- Settings -->
    <string name="settings_unlink_button">Unlink account</string>
    <string name="settings_dialog_title">Are you sure?</string>
    <string name="settings_dialog_message">If you lose your Private Key you won\'t be able to recover your wallet if you change your device or forget your pin code.</string>
    <string name="settings_dialog_positive">Yes, unlink account</string>
    <string name="settings_dialog_negative">No, go back</string>
    <string name="settings_snackbar_message">You have been successfully logged out.</string>
    <string name="settings_danger_zone_text">Danger zone !</string>
    <string name="settings_add_asset_text">Add new trusted asset</string>
    <string name="settings_add_asset_button">Add to trusted</string>
    <string name="settings_asset_issuer_hint">Asset Issuer</string>
    <string name="settings_asset_code_hint">Asset code</string>
</resources>