<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="sk.stuba.fei.uim.mobv_project.data.view_models.intro.IntroViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.intro.IntroFragment">

        <EditText
            style="@style/edit_text_default"
            android:id="@+id/firstNameEditText"
            android:autofillHints="name"
            android:hint="@string/intro_first_name_hint"
            android:inputType="textPersonName"
            android:maxLength="255"
            android:text="@={viewModel.firstName}"
            app:layout_constraintBottom_toTopOf="@+id/lastNameEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            style="@style/edit_text_default"
            android:id="@+id/lastNameEditText"
            android:hint="@string/intro_last_name_hint"
            android:inputType="textPersonName"
            android:maxLength="255"
            android:text="@={viewModel.lastName}"
            android:autofillHints="lastName"
            app:layout_constraintBottom_toTopOf="@+id/registerPinEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

        <EditText
            style="@style/edit_text_default"
            android:id="@+id/registerPinEditText"
            android:hint="@string/intro_pin_pin_hint"
            android:inputType="numberPassword"
            android:text="@={viewModel.pin}"
            android:autofillHints="password"
            app:layout_constraintBottom_toTopOf="@+id/registerPinConfirmationEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameEditText" />

        <EditText
            style="@style/edit_text_default"
            android:id="@+id/registerPinConfirmationEditText"
            android:hint="@string/intro_pin_confirmation_hint"
            android:inputType="numberPassword"
            android:text="@={viewModel.confirmationPin}"
            android:autofillHints="password"
            app:layout_constraintBottom_toTopOf="@+id/createNewWalletButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPinEditText" />

        <Button
            style="@style/button_submit"
            android:id="@+id/createNewWalletButton"
            android:onClick="@{() -> viewModel.createNewWallet()}"
            android:text="@string/intro_create_new_wallet_button_text"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/importWalletButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPinConfirmationEditText" />

        <Button
            style="@style/button_text_submit"
            android:id="@+id/importWalletButton"
            android:onClick="@{() -> viewModel.importWallet()}"
            android:text="@string/intro_import_wallet_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createNewWalletButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
