<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/introFragment">

    <fragment
        android:id="@+id/createWalletFragment"
        android:name="sk.stuba.fei.uim.mobv_project.ui.intro.CreateWalletFragment"
        android:label="@string/fragment_create_wallet_label"
        tools:layout="@layout/fragment_create_wallet">
        <action
            android:id="@+id/action_createWalletFragment_to_myBalanceFragment"
            app:destination="@id/myBalanceFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <argument
            android:name="firstName"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="lastName"
            app:argType="string"
            app:nullable="true" />
        <argument android:name="pin"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/importWalletFragment"
        android:name="sk.stuba.fei.uim.mobv_project.ui.intro.ImportWalletFragment"
        android:label="@string/fragment_import_wallet_label"
        tools:layout="@layout/fragment_import_wallet">
        <action
            android:id="@+id/action_importWalletFragment_to_myBalanceFragment"
            app:destination="@id/myBalanceFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <argument
            android:name="firstName"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="lastName"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="pin"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/introFragment"
        android:name="sk.stuba.fei.uim.mobv_project.ui.intro.IntroFragment"
        android:label="@string/fragment_intro_label"
        tools:layout="@layout/fragment_intro">
        <action
            android:id="@+id/action_introFragment_to_createWalletFragment"
            app:destination="@id/createWalletFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_introFragment_to_importWalletFragment"
            app:destination="@id/importWalletFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/contactsFragment"
        android:name="sk.stuba.fei.uim.mobv_project.ui.contacts.ContactsFragment"
        android:label="@string/fragment_contacts_label">
        <action
            android:id="@+id/action_contactsFragment_to_newContactFragment"
            app:destination="@id/newContactFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/newContactFragment"
        android:name="sk.stuba.fei.uim.mobv_project.ui.contacts.NewContactFragment"
        android:label="@string/fragment_new_contact_label">
        <argument
            android:name="contact"
            android:defaultValue="@null"
            app:argType="sk.stuba.fei.uim.mobv_project.data.entities.Contact"
            app:nullable="true" />
        <action
            android:id="@+id/action_newContactFragment_to_contactsFragment"
            app:destination="@id/contactsFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left" />
    </fragment>
    <fragment
        android:id="@+id/myBalanceFragment"
        android:name="sk.stuba.fei.uim.mobv_project.ui.my_balance.MyBalanceFragment"
        android:label="@string/fragment_my_balance_label"
        tools:layout="@layout/fragment_my_balance" >
        <action
            android:id="@+id/action_myBalanceFragment_to_createNewTransactionFragment"
            app:destination="@id/createNewTransactionFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="sk.stuba.fei.uim.mobv_project.ui.settings.SettingsFragment"
        android:label="@string/fragment_settings_label"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_aboutFragment_to_introFragment"
            app:destination="@id/introFragment" />
    </fragment>
    <fragment
        android:id="@+id/createNewTransactionFragment"
        android:name="sk.stuba.fei.uim.mobv_project.ui.transaction.CreateNewTransactionFragment"
        android:label="@string/fragment_create_new_transaction_label"
        tools:layout="@layout/fragment_create_new_transaction">
        <action
            android:id="@+id/action_createNewTransactionFragment_to_saveRecipientFragment"
            app:destination="@id/saveRecipientFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_createNewTransactionFragment_to_myBalanceFragment"
            app:destination="@id/myBalanceFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/saveRecipientFragment"
        android:name="sk.stuba.fei.uim.mobv_project.ui.transaction.SaveRecipientFragment"
        android:label="@string/fragment_save_recipient_label"
        tools:layout="@layout/fragment_save_recipient">
        <action
            android:id="@+id/action_saveRecipientFragment_to_myBalanceFragment"
            app:destination="@id/myBalanceFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <argument
            android:name="accountId"
            app:argType="string" />
    </fragment>
</navigation>