<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="newContactViewModel"
            type="sk.stuba.fei.uim.mobv_project.data.view_models.contacts.NewContactViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.contacts.NewContactFragment">

        <!-- WHATEVER YOU DO, NEPRIDAVAJTE SEM AUTOFILL HINTS. NASTANE KONIEC VESMIRU AKO HO POZNAME -->
        <EditText
            style="@style/edit_text_default"
            android:id="@+id/newContactName"
            android:hint="@string/contactNameHint"
            android:inputType="textPersonName"
            android:text="@={newContactViewModel.contactName}"
            app:layout_constraintBottom_toTopOf="@+id/newContactAccountId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            style="@style/edit_text_default"
            android:id="@+id/newContactAccountId"
            android:enabled="@{newContactViewModel.isNew}"
            android:hint="@string/contactAccountIdHint"
            android:inputType="text"
            android:text="@={newContactViewModel.contactAccountId}"
            app:layout_constraintBottom_toTopOf="@+id/addNewContactButtonTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newContactName" />

        <Button
            style="@style/button_submit"
            android:id="@+id/addNewContactButtonTitle"
            android:onClick="@{() -> newContactViewModel.saveContact()}"
            android:text="@string/addNewContactButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newContactAccountId" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>