<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="sk.stuba.fei.uim.mobv_project.data.view_models.intro.CreateWalletViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.intro.CreateWalletFragment">


        <TextView
            android:id="@+id/warningTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="8dp"
            android:paddingTop="16dp"
            android:paddingEnd="8dp"
            android:paddingBottom="16dp"
            android:text="@string/registered_warning_text"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/copyPrivateKeyButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/warningTextView">

            <TextView
                style="@style/textView_label"
                android:id="@+id/privateKeyLabelTextView"
                android:text="@string/intro_private_key_label_text"
                app:layout_constraintBottom_toTopOf="@+id/privateKeyTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/textView_private_key"
                android:id="@+id/privateKeyTextView"
                android:text="@{viewModel.privateKey}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/privateKeyLabelTextView"
                tools:text="Private keyPrivate keyPrivate keyPrivate keyPrivate keyPrivate keyPrivate keyPrivate keyPrivate keyPrivate keyPrivate keyPrivate keyPrivate keyPrivate keyPrivate keyPrivate key" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            style="@style/button_text_submit"
            android:id="@+id/copyPrivateKeyButton"
            android:onClick="@{() -> viewModel.copyPrivateKeyToClipboard()}"
            android:text="@string/registered_copy_private_key_button_text"
            app:layout_constraintBottom_toTopOf="@+id/continueButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <Button
            style="@style/button_submit"
            android:id="@+id/continueButton"
            android:onClick="@{() -> viewModel.continueToMyBalance()}"
            android:text="@string/registered_continue_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/copyPrivateKeyButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>